# SerikaCord

./: .dockerignore  .env.example  .gitignore  AI-READ-THIS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  getLocale.ts  getRegion.ts  gt-preload.ts  gt.config.json  next.config.ts  package-lock.json  package.json  server.ts  test-loader.js  tsconfig.json
.claude/: launch.json
.github/workflows/: build-qt.yml  build.yml
desktop/: README.md  main.js  package.json  preload.js
desktop-QT/: .gitignore  CMakeLists.txt  Info.plist  README.md  serikacord.desktop
desktop-QT/src/: DeepLinkHandler.cpp  DeepLinkHandler.h  MainWindow.cpp  MainWindow.h  PresenceDetector.cpp  PresenceDetector.h  SerikaWebPage.h  SingleInstance.cpp  SingleInstance.h  TrayIcon.cpp  TrayIcon.h  Updater.cpp  Updater.h  UpdaterWindow.cpp  UpdaterWindow.h  WebBridge.cpp  WebBridge.h  main.cpp  qwebchannel_js.h
desktop-QT/src/resources/: serikacord.qrc
desktop-tauri/: README.md  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: main.rs  presence.rs  updater_window.rs
desktop/resources/: README.md
docs/: social-sdk-design.md
drizzle/: 0001_secret_sway.sql  0002_organic_bromley.sql  0003_suppress_embeds.sql  0004_server_tags.sql  manual_activity_history.sql  manual_bug_reports.sql  manual_channel_read_states.sql  manual_discord_consent.sql  manual_discord_restricted_guilds.sql  manual_discord_users.sql  manual_emoji_favorites.sql  manual_feedback_reports.sql  manual_message_interaction.sql  manual_social_sdk.sql  manual_timeout_member_enum.sql  manual_widget_v2.sql
drizzle/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
mobile/: README.md  capacitor.config.json  package.json
mobile/android/: build.gradle  variables.gradle
mobile/android/app/: build.gradle
mobile/src/: app.ts
mobile/www/: index.html
nginx/: nginx.conf
public/: sw.js
public/_gt/: ar-OM.json  et.json  ja.json  nl.json  si.json  sv.json
scripts/: add-badges.ts  check-chat-media-hardcoded.sh  check-theme-hardcoded.sh  gateway.ts  merge-translations.js  migrate-media-urls.ts  repair-bug-report-media.ts  seed-file-types.ts  sync-translations.js  translate-locale.js  upload-emojis-stickers.ts
src/: loadTranslations.ts  middleware.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(auth)/: AuthLayoutClient.tsx  layout.tsx
src/app/[inviteCode]/: page.tsx
src/app/channels/: ChannelsLayoutClient.tsx  layout.tsx
src/app/developers/: DevelopersLayoutClient.tsx  layout.tsx
src/app/dm/: DMLayoutClient.tsx  layout.tsx
src/app/download/: page.tsx
src/components/: KeyboardShortcutsDialog.tsx  LocaleSync.tsx  QuickSwitcher.tsx  TauriUpdater.tsx
src/contexts/: AuthContext.tsx  ServerContext.tsx  ThemeContext.tsx  UnreadContext.tsx
src/hooks/: useAppHotkeys.ts  useChatSession.ts  useChatStream.ts  useComposerSuggestions.ts  useEmojiFavorites.ts  useGifFavorites.ts  useIgdbSearch.ts  useInView.ts  useIsMobile.ts  useLocale.ts  useMediaLightbox.ts  useMentions.ts  useMessageActions.ts  useMoeActivity.ts  usePermissions.ts  useServerLayout.ts  useSettingsDraft.ts  useSlashCommands.ts  useSpeakingUsers.ts  useTimeoutRemaining.ts
src/lib/: config.ts  keybinds.ts  notifyServersChanged.ts  seo.ts  statusLabels.ts  userDisplayNameStyle.ts  utils.ts
src/types/: bun.d.ts  native.d.ts  qr-libs.d.ts
(+265 files in other folders)
