[package]
name = "serikacord-desktop"
version = "1.1.2"
description = "SerikaCord native desktop app"
authors = ["SerikaCord Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Process enumeration for game/app rich-presence detection.
sysinfo = "0.30"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
